--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>{{ site.title | escape }}</title>
+	<title>{{ site.title | escape }}</title>		
 
-	<link rel="icon" type="image/png" href="./img/favicon.png">
+	<link rel="icon" type="image/png" href="https://allhdwallpapers.com/wp-content/uploads/2015/07/Programming-7.jpg">
 
 	<!--  WebFonts  -->
 	<link href="./css/css" rel="stylesheet" type="text/css">
