--- a/_includes/section_workexperience.html
+++ b/_includes/section_workexperience.html
@@ -4,29 +4,19 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div>
-			<div class="main-timeline4">
+			<div>
 
 					{% for role in site.roles %}
-						<div class="timeline">
-								<a href="#" class="timeline-content"  data-toggle="modal" data-target="#{{role.employer | replace: ' ', '_'}}-{{role.title | replace: ' ', '_'}}">
-										<span class="year">{{role.start}}</span>
-										<div class="inner-content">
-												<h3 class="title">{{role.title}}</h3>
-												<h5>{{role.employer}}</h5>
-										</div>
-								</a>
-						</div>
+					<p><strong>Employer:</strong> {{role.employer}}</p>
+					<P>Title: {{role.title}}</P>
+					<p>Start: {{role.start}}</p>
+					<p>End: {{role.end}}</p>
+					<p>Description: {{role.description}}</p>
+					<br/>
 					{% endfor %}
 					{% for edu in site.education %}
-						<div class="timeline">
-								<a href="#" class="timeline-content"  data-toggle="modal" data-target="#{{edu.school | replace: '.', '' | replace: ' ', ''}}-{{edu.level | replace: '.', '' | replace: ' ', '' | replace: '(', '' | replace: ')', ''}}">
-										<span class="year">{{edu.date}}</span>
-										<div class="inner-content">
-												<h3 class="title">{{edu.level}}</h3>
-												<h5>{{edu.subject}}</h5>
-										</div>
-								</a>
-						</div>
+					<p><strong>School name</strong>:{{edu.school}}</p>
+					<p>Date: {{edu.date}}
 					{% endfor %}
 			</div>
 
